@@ -12,9 +12,11 @@ import htsjdk.variant.variantcontext.VariantContextBuilder;
 import htsjdk.variant.vcf.VCFConstants;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.IntStream;
+import lombok.Getter;
 import org.jspecify.annotations.Nullable;
 import org.molgenis.vcf.decisiontree.filter.model.Field;
 import org.molgenis.vcf.decisiontree.filter.model.FieldType;
@@ -28,6 +30,7 @@ import org.molgenis.vcf.utils.metadata.ValueCount;
 import org.molgenis.vcf.utils.metadata.ValueType;
 
 /** {@link VariantContext} wrapper that works with nested data (e.g. CSQ INFO fields).. */
+@Getter
 public class VcfRecord {
 
   private static final List<String> PASS_FILTER = List.of(VCFConstants.PASSES_FILTERS_v4);
@@ -36,10 +39,6 @@ public class VcfRecord {
 
   public VcfRecord(VariantContext variantContext) {
     this.variantContext = requireNonNull(variantContext);
-  }
-
-  public VariantContext getVariantContext() {
-    return variantContext;
   }
 
   public int getNrAltAlleles() {
@@ -60,64 +59,42 @@ public class VcfRecord {
       Field field, Allele allele, @Nullable SampleContext sampleContext) {
     Object value;
     FieldType fieldType = field.getFieldType();
-    switch (fieldType) {
-      case COMMON:
-        value = getCommonValue(field, allele);
-        break;
-      case INFO:
-        value = getInfoValue(field, allele);
-        break;
-      case INFO_VEP:
-        value = getNestedVepValue(field);
-        break;
-      case GENOTYPE:
-        value = sampleContext != null ? getNestedGTValue((NestedField) field, sampleContext) : null;
-        break;
-      case FORMAT:
-        if (sampleContext == null) {
-          throw new UnsupportedOperationException(
-              "Cannot filter on FORMAT fields when running in variant filter mode.");
-        }
-        value = getFormatField(field, sampleContext);
-        break;
-      case SAMPLE:
-        value = sampleContext != null ? getSampleValue(field, sampleContext) : null;
-        break;
-      default:
-        throw new UnexpectedEnumException(fieldType);
-    }
+    value =
+        switch (fieldType) {
+          case COMMON -> getCommonValue(field, allele);
+          case INFO -> getInfoValue(field, allele);
+          case INFO_VEP -> getNestedVepValue(field);
+          case GENOTYPE ->
+              sampleContext != null ? getNestedGTValue((NestedField) field, sampleContext) : null;
+          case FORMAT -> {
+            if (sampleContext == null) {
+              throw new UnsupportedOperationException(
+                  "Cannot filter on FORMAT fields when running in variant filter mode.");
+            }
+            yield getFormatField(field, sampleContext);
+          }
+          case SAMPLE -> sampleContext != null ? getSampleValue(field, sampleContext) : null;
+        };
     return value;
   }
 
   private @Nullable Object getSampleValue(Field field, SampleContext sampleContext) {
     Object value;
-    SampleFieldType sampleField = SampleFieldType.valueOf(field.getId().toUpperCase());
-    switch (sampleField) {
-      case ID:
-        value = sampleContext.getId();
-        break;
-      case AFFECTED_STATUS:
-        value = sampleContext.getAffectedStatus().toString();
-        break;
-      case SEX:
-        value = sampleContext.getSex().toString();
-        break;
-      case FATHER_ID:
-        value = sampleContext.getFatherId();
-        break;
-      case MOTHER_ID:
-        value = sampleContext.getMotherId();
-        break;
-      case FAMILY_ID:
-        value = sampleContext.getFamilyId();
-        break;
-      case PHENOTYPES:
-        List<String> phenotypes = sampleContext.getPhenotypes();
-        value = phenotypes.isEmpty() ? null : phenotypes;
-        break;
-      default:
-        throw new UnexpectedEnumException(sampleField);
-    }
+    SampleFieldType sampleField = SampleFieldType.valueOf(field.getId().toUpperCase(Locale.ROOT));
+    value =
+        switch (sampleField) {
+          case ID -> sampleContext.getId();
+          case AFFECTED_STATUS -> sampleContext.getAffectedStatus().toString();
+          case SEX -> sampleContext.getSex().toString();
+          case FATHER_ID -> sampleContext.getFatherId();
+          case MOTHER_ID -> sampleContext.getMotherId();
+          case FAMILY_ID -> sampleContext.getFamilyId();
+          case PHENOTYPES -> {
+            List<String> phenotypes = sampleContext.getPhenotypes();
+            yield phenotypes.isEmpty() ? null : phenotypes;
+          }
+          default -> throw new UnexpectedEnumException(sampleField);
+        };
     return value;
   }
 
@@ -130,62 +107,34 @@ public class VcfRecord {
       return null;
     }
     GenotypeFieldType genotypeFieldType = GenotypeFieldType.valueOf(field.getId());
-    switch (genotypeFieldType) {
-      case ALLELES:
-        value =
-            genotype.getAlleles().stream()
-                .map(htsjdk.variant.variantcontext.Allele::getBaseString)
-                .toList();
-        break;
-      case ALLELE_NUM:
-        value =
-            genotype.getAlleles().stream()
-                .map(allele -> variantContext.getAlleles().indexOf(allele))
-                .toList();
-        break;
-      case TYPE:
-        switch (genotype.getType()) {
-          case MIXED:
-            value = GenotypeType.MIXED.name();
-            break;
-          case HET:
-            value = GenotypeType.HET.name();
-            break;
-          case HOM_REF:
-            value = GenotypeType.HOM_REF.name();
-            break;
-          case HOM_VAR:
-            value = GenotypeType.HOM_VAR.name();
-            break;
-          case NO_CALL:
-            value = GenotypeType.NO_CALL.name();
-            break;
-          case UNAVAILABLE:
-            value = GenotypeType.UNAVAILABLE.name();
-            break;
-          default:
-            throw new UnexpectedEnumException(genotype.getType());
-        }
-        break;
-      case MIXED:
-        value = genotype.isMixed();
-        break;
-      case CALLED:
-        value = genotype.isCalled();
-        break;
-      case PLOIDY:
-        int ploidy = genotype.getPloidy();
-        value = ploidy != 0 ? ploidy : null;
-        break;
-      case PHASED:
-        value = genotype.isPhased();
-        break;
-      case NON_INFORMATIVE:
-        value = genotype.isNonInformative();
-        break;
-      default:
-        throw new UnexpectedEnumException(genotypeFieldType);
-    }
+    value =
+        switch (genotypeFieldType) {
+          case ALLELES ->
+              genotype.getAlleles().stream()
+                  .map(htsjdk.variant.variantcontext.Allele::getBaseString)
+                  .toList();
+          case ALLELE_NUM ->
+              genotype.getAlleles().stream()
+                  .map(allele -> variantContext.getAlleles().indexOf(allele))
+                  .toList();
+          case TYPE ->
+              switch (genotype.getType()) {
+                case MIXED -> GenotypeType.MIXED.name();
+                case HET -> GenotypeType.HET.name();
+                case HOM_REF -> GenotypeType.HOM_REF.name();
+                case HOM_VAR -> GenotypeType.HOM_VAR.name();
+                case NO_CALL -> GenotypeType.NO_CALL.name();
+                case UNAVAILABLE -> GenotypeType.UNAVAILABLE.name();
+              };
+          case MIXED -> genotype.isMixed();
+          case CALLED -> genotype.isCalled();
+          case PLOIDY -> {
+            int ploidy = genotype.getPloidy();
+            yield ploidy != 0 ? ploidy : null;
+          }
+          case PHASED -> genotype.isPhased();
+          case NON_INFORMATIVE -> genotype.isNonInformative();
+        };
     return value;
   }
 
@@ -199,36 +148,35 @@ public class VcfRecord {
 
     Object typedValue;
     switch (field.getId()) {
-      case ("GT"):
+      case "GT" -> {
         String separator = genotype.isPhased() ? "|" : "/";
         typedValue =
             String.join(
                 separator,
                 genotype.getAlleles().stream()
                     .map(allele -> variantContext.getAlleles().indexOf(allele))
-                    .map(index -> mapAlleleString(index))
+                    .map(this::mapAlleleString)
                     .toList());
-        break;
-      case ("AD"):
+      }
+      case "AD" -> {
         int[] ad = genotype.getAD();
         typedValue = ad != null ? IntStream.of(ad).boxed().toList() : null;
-        break;
-      case ("DP"):
+      }
+      case "DP" -> {
         typedValue = genotype.getDP();
         if ((Integer) typedValue == -1) {
           typedValue = null;
         }
-        break;
-      case ("GQ"):
+      }
+      case "GQ" -> {
         int gq = genotype.getGQ();
         typedValue = gq != -1 ? gq : null;
-        break;
-      case ("PL"):
+      }
+      case "PL" -> {
         int[] pl = genotype.getPL();
         typedValue = pl != null ? IntStream.of(pl).boxed().toList() : null;
-        break;
-      default:
-        typedValue = getExtendedAttributeValue(field, genotype);
+      }
+      default -> typedValue = getExtendedAttributeValue(field, genotype);
     }
     return typedValue;
   }
@@ -248,19 +196,18 @@ public class VcfRecord {
     ValueCount valueCount = field.getValueCount();
     ValueCount.Type valueCountType = valueCount.getType();
     switch (valueCountType) {
-      case A, R, VARIABLE:
-        typedValue = value != null ? VcfUtils.getTypedVcfListValue(field, value.toString()) : null;
-        break;
-      case FIXED:
+      case A, R, VARIABLE ->
+          typedValue =
+              value != null ? VcfUtils.getTypedVcfListValue(field, value.toString()) : null;
+      case FIXED -> {
         if (valueCount.getCount() == 1) {
           typedValue = value != null ? VcfUtils.getTypedVcfValue(field, value.toString()) : null;
         } else {
           typedValue =
               value != null ? VcfUtils.getTypedVcfListValue(field, value.toString()) : null;
         }
-        break;
-      default:
-        throw new UnexpectedEnumException(valueCountType);
+      }
+      default -> throw new UnexpectedEnumException(valueCountType);
     }
     return typedValue;
   }
@@ -278,7 +225,7 @@ public class VcfRecord {
     List<String> infoValues =
         VcfUtils.getInfoAsStringList(variantContext, parentId, VCFConstants.MISSING_VALUE_v4);
     if (!infoValues.isEmpty()) {
-      String singleValue = infoValues.get(0);
+      String singleValue = infoValues.getFirst();
       String[] split = singleValue.split(separator, -1);
       String stringValue = split[index];
       if (!stringValue.isEmpty()) {
@@ -294,36 +241,19 @@ public class VcfRecord {
   }
 
   private @Nullable Object getCommonValue(Field field, Allele allele) {
-    Object value;
-    switch (field.getId()) {
-      case "#CHROM":
-        value = variantContext.getContig();
-        break;
-      case "POS":
-        value = variantContext.getStart();
-        break;
-      case "ID":
-        value = variantContext.hasID() ? asList(variantContext.getID().split(";")) : emptyList();
-        break;
-      case "REF":
-        value = variantContext.getReference().getBaseString();
-        break;
-      case "ALT":
-        value = asList(allele.getBases().split(","));
-        break;
-      case "QUAL":
-        value = variantContext.hasLog10PError() ? variantContext.getPhredScaledQual() : null;
-        break;
-      case "FILTER":
-        value = getCommonFilterValue();
-        break;
-      default:
-        throw new UnknownFieldException(field.getId(), FieldType.COMMON);
-    }
-    return value;
+    return switch (field.getId()) {
+      case "#CHROM" -> variantContext.getContig();
+      case "POS" -> variantContext.getStart();
+      case "ID" -> variantContext.hasID() ? asList(variantContext.getID().split(";")) : emptyList();
+      case "REF" -> variantContext.getReference().getBaseString();
+      case "ALT" -> asList(allele.getBases().split(","));
+      case "QUAL" -> variantContext.hasLog10PError() ? variantContext.getPhredScaledQual() : null;
+      case "FILTER" -> getCommonFilterValue();
+      default -> throw new UnknownFieldException(field.getId(), FieldType.COMMON);
+    };
   }
 
-  private @Nullable Object getCommonFilterValue() {
+  private Object getCommonFilterValue() {
     Object value;
     Set<String> filters = variantContext.getFiltersMaybeNull();
     if (filters == null) {
@@ -341,72 +271,41 @@ public class VcfRecord {
   }
 
   private @Nullable Object getInfoValue(Field field, Allele allele) {
-    Object value;
-
     ValueCount valueCount = field.getValueCount();
     ValueCount.Type valueCountType = valueCount.getType();
-    switch (valueCountType) {
-      case A:
+    return switch (valueCountType) {
+      case A -> {
         List<?> aInfoList = getInfoList(field);
-        value = !aInfoList.isEmpty() ? aInfoList.get(allele.getIndex() - 1) : null;
-        break;
-      case R:
+        yield !aInfoList.isEmpty() ? aInfoList.get(allele.getIndex() - 1) : null;
+      }
+      case R -> {
         List<?> rInfoList = getInfoList(field);
-        value = !rInfoList.isEmpty() ? rInfoList.get(allele.getIndex()) : null;
-        break;
-      case VARIABLE:
-        value = getInfoList(field);
-        break;
-      case FIXED:
-        value = valueCount.getCount() <= 1 ? getInfo(field) : getInfoList(field);
-        break;
-      default:
-        throw new UnexpectedEnumException(valueCountType);
-    }
-    return value;
+        yield !rInfoList.isEmpty() ? rInfoList.get(allele.getIndex()) : null;
+      }
+      case VARIABLE -> getInfoList(field);
+      case FIXED -> valueCount.getCount() <= 1 ? getInfo(field) : getInfoList(field);
+      default -> throw new UnexpectedEnumException(valueCountType);
+    };
   }
 
   private @Nullable Object getInfo(Field field) {
-    Object value;
     ValueType valueType = field.getValueType();
-    switch (valueType) {
-      case INTEGER:
-        value = VcfUtils.getInfoAsInteger(variantContext, field);
-        break;
-      case FLAG:
-        value = VcfUtils.getInfoAsBoolean(variantContext, field);
-        break;
-      case FLOAT:
-        value = VcfUtils.getInfoAsDouble(variantContext, field);
-        break;
-      case CHARACTER, STRING, CATEGORICAL:
-        value = VcfUtils.getInfoAsString(variantContext, field);
-        break;
-      default:
-        throw new UnexpectedEnumException(valueType);
-    }
-    return value;
+    return switch (valueType) {
+      case INTEGER -> VcfUtils.getInfoAsInteger(variantContext, field);
+      case FLAG -> VcfUtils.getInfoAsBoolean(variantContext, field);
+      case FLOAT -> VcfUtils.getInfoAsDouble(variantContext, field);
+      case CHARACTER, STRING, CATEGORICAL -> VcfUtils.getInfoAsString(variantContext, field);
+    };
   }
 
   private List<?> getInfoList(Field field) {
-    List<?> listValues;
     ValueType valueType = field.getValueType();
-    switch (valueType) {
-      case INTEGER:
-        listValues = VcfUtils.getInfoAsIntegerList(variantContext, field);
-        break;
-      case FLOAT:
-        listValues = VcfUtils.getInfoAsDoubleList(variantContext, field);
-        break;
-      case CHARACTER, STRING, CATEGORICAL:
-        listValues = VcfUtils.getInfoAsStringList(variantContext, field);
-        break;
-      case FLAG:
-        throw new FlagListException(field.getId());
-      default:
-        throw new UnexpectedEnumException(valueType);
-    }
-    return listValues;
+    return switch (valueType) {
+      case INTEGER -> VcfUtils.getInfoAsIntegerList(variantContext, field);
+      case FLOAT -> VcfUtils.getInfoAsDoubleList(variantContext, field);
+      case CHARACTER, STRING, CATEGORICAL -> VcfUtils.getInfoAsStringList(variantContext, field);
+      case FLAG -> throw new FlagListException(field.getId());
+    };
   }
 
   public void setAttribute(Field attribute, Object value) {
